# sintao-oj

./: .dockerignore  .gitignore  README.md  docker-compose-infra.yml  pom.xml  temp.txt
oj-agent/: .env.local.example  PHASE1-RUNTIME.md  README.md  pyproject.toml
oj-agent/app/: __init__.py  config.py  main.py
oj-agent/app/api/: __init__.py  chat.py  debug.py  runs.py  serializers.py  training.py
oj-agent/app/application/: run_execution.py  run_labels.py  run_projection.py  run_service.py
oj-agent/app/core/: __init__.py  config.py  identity.py  jsonl_store.py  nacos_config.py  nacos_registry.py
oj-agent/app/domain/: __init__.py  models.py  runs.py  stores.py
oj-agent/oj_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
oj-agent/tests/: conftest.py  test_brain_selection.py  test_capability_graphs.py  test_chat_api.py  test_config.py  test_context_analyzer_node.py  test_evaluation_hooks.py  test_finalizer_node.py  test_graph_builder.py  test_graph_runtime.py  test_guardrail_runtime.py  test_ingress_node.py  test_knowledge_retriever_node.py  test_llm_runtime_service.py  test_nacos_registry.py  test_observability_runtime.py  test_plan_graph.py  test_practice_recommender_node.py  test_qdrant_indexer.py  test_retrieval_runtime.py  test_retrieval_seed.py  test_router_context.py  test_router_node.py  test_run_api.py  test_runtime_engine.py  test_runtime_models.py  test_runtime_recording.py  test_stream_events.py  test_supervisor_graph.py  test_tool_registry.py  test_training_api.py  test_training_planner.py  test_training_runtime_engine.py  test_tutor_graph.py
(+752 files in other folders)
